feat: reduce Qwen3-32B context size and fix HA SSL trust
- Halved context window for Qwen3-VL-32B (Q4/Q6) to 32k to save VRAM.
- Added SSL_CERT_FILE environment variable to Home Assistant to ensure internal services like MCP trust the Caddy CA.

--- a/roles/homeassistant/tasks/main.yml
+++ b/roles/homeassistant/tasks/main.yml
@@ -127,6 +127,7 @@
           #  - /dev/ttyACM0 # zigbee coordinator - z2m uses this
           environment:
             - REQUESTS_CA_BUNDLE=/etc/ssl/certs/ca-certificates.crt
+            - SSL_CERT_FILE=/etc/ssl/certs/ca-certificates.crt
           labels:
             - wud.tag.include=^\d+\.\d+\.\d+$$
             - wud.link.template=https://github.com/home-assistant/core/releases/tag/$${major}.$${minor}.$${patch}
