feat(observability): update core config and services for Arize Phoenix

--- a/group_vars/all/config.yml
+++ b/group_vars/all/config.yml
@@ -92,7 +92,9 @@ config_root: /home/{{ username }}/config
 base_src_path: /opt/src # Base path for cloning source repos
 ollama_host: ailab-ubuntu.lan
 litellm_proxy_port: 4000
-langfuse_port: 3003
+phoenix_port: 6006
+phoenix_grpc_port: 4317
+phoenix_data_folder: "{{ config_root }}/phoenix"
 homeassistant_config_folder: "{{ config_root }}/home-assistant"
 homeassistant_media_folder: /tank/medien
 music_assistant_data_folder: "{{ config_root }}/music-assistant"
