--- a/roles/llm_observability/tasks/main.yml
+++ b/roles/llm_observability/tasks/main.yml
@@ -1,36 +1,42 @@
 ---
 # tasks file for llm_observability
 
-- name: Langfuse Setup
+- name: Phoenix Setup
   become: true
   block:
-    - name: Define Langfuse related facts
+    - name: Define Phoenix related facts
       ansible.builtin.set_fact:
-        langfuse_config_dir_host: "{{ llm_base_config_path }}/langfuse"
-        langfuse_compose_file_dest: "{{ llm_base_config_path }}/langfuse/docker-compose.yml"
+        phoenix_config_dir_host: "{{ llm_base_config_path }}/phoenix"
+        phoenix_compose_file_dest: "{{ llm_base_config_path }}/phoenix/docker-compose.yml"
 
-    - name: Ensure Langfuse config directory exists on host
+    - name: Ensure Phoenix config directory exists on host
       ansible.builtin.file:
-        path: "{{ langfuse_config_dir_host }}"
+        path: "{{ phoenix_config_dir_host }}"
         state: directory
         mode: "0755"
 
-    - name: Template Langfuse docker-compose.yml
+    - name: Ensure Phoenix data directory exists on host
+      ansible.builtin.file:
+        path: "{{ phoenix_data_folder }}"
+        state: directory
+        mode: "0755"
+        owner: "{{ uid }}"
+        group: "{{ uid }}"
+
+    - name: Template Phoenix docker-compose.yml
       ansible.builtin.template:
-        src: langfuse-docker-compose.yml.j2
-        dest: "{{ langfuse_compose_file_dest }}"
+        src: phoenix-docker-compose.yml.j2
+        dest: "{{ phoenix_compose_file_dest }}"
         mode: "0644"
 
-    - name: Start Langfuse services with Docker Compose
+    - name: Start Phoenix services with Docker Compose
       community.docker.docker_compose_v2:
-        project_src: "{{ langfuse_config_dir_host }}" # Directory containing the docker-compose.yml
+        project_src: "{{ phoenix_config_dir_host }}" # Directory containing the docker-compose.yml
         state: present # Ensures services are running, creates them if not present
         pull: always # Optionally pull images
-      environment:
-        POSTGRES_VERSION: "{{ langfuse_postgres_version }}"
-      register: langfuse_compose_result
+      register: phoenix_compose_result
 
-    - name: Debug Langfuse compose result
+    - name: Debug Phoenix compose result
       ansible.builtin.debug:
-        var: langfuse_compose_result
-      when: langfuse_compose_result is defined and langfuse_compose_result.changed
+        var: phoenix_compose_result
+      when: phoenix_compose_result is defined and phoenix_compose_result.changed
