--- a/roles/llm_tools/tasks/main.yml
+++ b/roles/llm_tools/tasks/main.yml
@@ -80,10 +80,7 @@
             - /etc/ssl/certs:/etc/ssl/certs:ro
             - "{{ caddy_data_folder }}/caddy/pki/authorities/local:/opt/custom-certificates:ro"
           environment:
-            LANGFUSE_PUBLIC_KEY: "{{ langfuse_homelab_public_key }}"
-            LANGFUSE_SECRET_KEY: "{{ litellm_homelab_secret_key | default(langfuse_homelab_secret_key) }}"
-            LANGFUSE_HOST: "{{ langfuse_host_for_litellm }}"
-            LANGFUSE_OTEL_HOST: "{{ langfuse_host_for_litellm }}"
+            PHOENIX_COLLECTOR_ENDPOINT: "{{ phoenix_host_for_litellm }}"
             LITELLM_MASTER_KEY: "{{ litellm_master_key }}"
             DATABASE_URL: "{{ litellm_database_url }}"
             REDIS_HOST: "{{ litellm_redis_container_name }}"
