--- a/group_vars/all/llms.yml
+++ b/group_vars/all/llms.yml
@@ -34,6 +34,7 @@ llamaswap_models:
       --min-p 0.0
       --presence-penalty 1.5
       --jinja
+      --fit on
     supports_function_calling: true
     supports_vision: true
     supports_reasoning: false
@@ -85,6 +86,7 @@ llamaswap_models:
       --min-p 0.0
       --presence-penalty 1.5
       --jinja
+      --fit on
     supports_function_calling: true
     supports_vision: true
     supports_reasoning: false
@@ -110,6 +112,7 @@ llamaswap_models:
       --min-p 0.0
       --presence-penalty 0.0
       --jinja
+      --fit on
     supports_function_calling: true
     supports_vision: true
     supports_reasoning: true
@@ -135,6 +138,7 @@ llamaswap_models:
       --top-k 20
       --repeat-penalty 1.05
       --jinja
+      --fit on
     supports_function_calling: true
     supports_vision: false
     supports_reasoning: false
@@ -159,6 +163,7 @@ llamaswap_models:
       --temp 0.6
       --top-p 0.95
       --jinja
+      --fit on
     supports_function_calling: true
     supports_vision: false
     supports_reasoning: true
@@ -187,6 +192,7 @@ llamaswap_models:
       --temp 0.6
       --top-p 0.95
       --jinja
+      --fit on
     supports_function_calling: true
     supports_vision: false
     supports_reasoning: true
@@ -242,6 +248,7 @@ llamaswap_models:
       --temp 0.15
       --min-p 0.01
       --jinja
+      --fit on
     supports_function_calling: true
     supports_vision: true
     supports_reasoning: false
@@ -266,6 +273,7 @@ llamaswap_models:
       --repeat-penalty 1.1
       --n-predict 16384
       --jinja
+      --fit on
     supports_function_calling: true
     supports_vision: true
     supports_reasoning: true
@@ -318,6 +326,7 @@ llamaswap_models:
       --top-p 0.95
       --n-predict 16384
       --jinja
+      --fit on
     supports_function_calling: true
     supports_vision: false
     supports_reasoning: true
@@ -395,6 +404,7 @@ llamaswap_models:
       -ot "blk\\.([0-9]|1[0-9]|2[0-4])\\.ffn_.*_exps.*=CPU"
       -ot "blk\\.(2[5-9]|3[0-5])\\.ffn_.*_exps.*=CUDA0"
       --jinja
+      --fit on
     supports_function_calling: true
     supports_vision: false
     supports_reasoning: true
@@ -459,6 +469,7 @@ llamaswap_models:
       --top-p 1.0
       --top-k 0
       --jinja
+      --fit on
     supports_function_calling: true
     supports_vision: false
     group: "3090"
@@ -487,6 +498,8 @@ llamaswap_models:
       --top-p 1.0
       --top-k 0
       --jinja
+      --fit on
+      --fit-target 4096
     supports_function_calling: true
     supports_vision: false
     group: "5060ti"
