feat(storage): enable backups share and fix Samba share name interpolation

--- a/roles/storage/tasks/main.yml
+++ b/roles/storage/tasks/main.yml
@@ -64,7 +64,7 @@
 
 - name: Add dataset shares to Samba environment
   ansible.builtin.set_fact:
-    samba_env: "{{ samba_env | combine({('SAMBA_VOLUME_CONFIG_' + item | capitalize): '[{{ item | capitalize }}]; path=/shares/' + item | capitalize + '; valid users = daniel, nuc; browseable = yes; guest ok = yes; read only = no; force group = users; create mask = 0775; directory mask = 0775'}) }}"
+    samba_env: "{{ samba_env | combine({('SAMBA_VOLUME_CONFIG_' + item | capitalize): '[' + item | capitalize + ']; path=/shares/' + item | capitalize + '; valid users = daniel, nuc; browseable = yes; guest ok = yes; read only = no; force group = users; create mask = 0775; directory mask = 0775'}) }}"
   loop: "{{ dataset_shares }}"
 
 - name: Add Time Machine shares to Samba environment
