--- a/group_vars/all/llms.yml
+++ b/group_vars/all/llms.yml
@@ -22,11 +22,9 @@ llamaswap_models:
       -hf unsloth/Qwen3-VL-8B-Instruct-GGUF:Q8_K_XL
       --port ${PORT}
       --n-predict 16384
-      --flash-attn auto
       --n-gpu-layers 99
       --cache-type-k q4_0
       --cache-type-v q4_0
-      --threads -1
       --top-p 0.8
       --top-k 20
       --temp 0.7
@@ -46,11 +44,9 @@ llamaswap_models:
       /app/llama-server
       -hf unsloth/Qwen3-VL-32B-Instruct-GGUF:Q6_K_XL
       --port ${PORT}
-      --ctx-size 32768
       --n-predict 16384
       --flash-attn auto
       --n-gpu-layers 99
-      --tensor-split 36,16
       --ubatch-size 512
       --cache-type-k q4_0
       --cache-type-v q4_0
@@ -61,6 +57,8 @@ llamaswap_models:
       --min-p 0.0
       --presence-penalty 1.5
       --jinja
+      --fit on
+      --fit-target 512,5120
       --swa-checkpoints 0
     supports_function_calling: true
     supports_vision: true
@@ -73,11 +71,9 @@ llamaswap_models:
       -hf unsloth/Qwen3-VL-32B-Instruct-GGUF:Q4_K_XL
       --port ${PORT}
       --n-predict 16384
-      --flash-attn auto
       --n-gpu-layers 99
       --cache-type-k q4_0
       --cache-type-v q4_0
-      --threads -1
       --top-p 0.8
       --top-k 20
       --temp 0.7
@@ -99,7 +95,6 @@ llamaswap_models:
       -hf unsloth/Qwen3-VL-30B-A3B-Thinking-GGUF:Q4_K_XL
       --port ${PORT}
       --n-predict 40960
-      --flash-attn auto
       --n-gpu-layers 99
       --cache-type-k q4_0
       --cache-type-v q4_0
@@ -126,7 +121,6 @@ llamaswap_models:
       --n-gpu-layers 99
       --cache-type-k q4_0
       --cache-type-v q4_0
-      --threads -1
       --temp 0.7
       --min-p 0.0
       --top-p 0.80
@@ -147,11 +141,7 @@ llamaswap_models:
       -hf unsloth/Nemotron-3-Nano-30B-A3B-GGUF:Q4_K_XL
       --port ${PORT}
       --n-predict 16384
-      --flash-attn auto
       --n-gpu-layers 99
-      --cache-type-k f16
-      --cache-type-v f16
-      --threads -1
       --prio 3
       --min-p 0.01
       --temp 0.6
@@ -174,11 +164,9 @@ llamaswap_models:
       /app/llama-server
       -hf unsloth/Nemotron-3-Nano-30B-A3B-GGUF:Q6_K_XL
       --port ${PORT}
-      --ctx-size 65536
       --n-predict 16384
       --flash-attn auto
       --n-gpu-layers 99
-      --tensor-split 22,10
       --ubatch-size 512
       --cache-type-k f16
       --cache-type-v f16
@@ -188,6 +176,8 @@ llamaswap_models:
       --temp 0.6
       --top-p 0.95
       --jinja
+      --fit on
+      --fit-target 512,5120
       --swa-checkpoints 0
     supports_function_calling: true
     supports_vision: false
@@ -204,11 +194,9 @@ llamaswap_models:
       -hf unsloth/Devstral-Small-2-24B-Instruct-2512-GGUF:Q5_K_XL
       --port ${PORT}
       --n-predict 32768
-      --flash-attn auto
       --n-gpu-layers 99
       --cache-type-k q4_0
       --cache-type-v q4_0
-      --threads -1
       --temp 0.15
       --min-p 0.01
       --jinja
@@ -225,11 +213,9 @@ llamaswap_models:
       /app/llama-server
       -hf unsloth/GLM-4.6V-Flash-GGUF:Q8_K_XL
       --port ${PORT}
-      --flash-attn auto
       --n-gpu-layers 99
       --cache-type-k q4_0
       --cache-type-v q4_0
-      --threads -1
       --top-p 0.6
       --top-k 2
       --temp 0.8
@@ -253,10 +239,8 @@ llamaswap_models:
       /app/llama-server
       -hf unsloth/Qwen3-Next-80B-A3B-Instruct-GGUF:Q4_K_XL
       --port ${PORT}
-      --ctx-size 65536
       --flash-attn auto
       --n-gpu-layers 99
-      --tensor-split 3,1
       --ubatch-size 512
       --cache-type-k q4_0
       --cache-type-v q4_0
@@ -269,6 +253,8 @@ llamaswap_models:
       --n-predict 16384
       --n-cpu-moe 15
       --jinja
+      --fit on
+      --fit-target 512,5120
       --swa-checkpoints 0
     supports_function_calling: true
     supports_vision: false
@@ -280,11 +266,9 @@ llamaswap_models:
       /app/llama-server
       -hf magiccodingman/Seed-OSS-36B-Instruct-unsloth-MagicQuant-Hybrid-GGUF:Seed-OSS-36B-Instruct-mxfp4_moe-EHQKOUD-IQ4NL.gguf
       --port ${PORT}
-      --flash-attn auto
       --n-gpu-layers 99
       --cache-type-k q4_0
       --cache-type-v q4_0
-      --threads -1
       --temp 1.1
       --top-p 0.95
       --n-predict 16384
@@ -315,11 +299,9 @@ llamaswap_models:
       /app/llama-server
       -hf unsloth/Seed-OSS-36B-Instruct-GGUF:Q5_K_XL
       --port ${PORT}
-      --ctx-size 16384
       --n-predict 16384
       --flash-attn auto
       --n-gpu-layers 99
-      --tensor-split 3,1
       --ubatch-size 512
       --cache-type-k q4_0
       --cache-type-v q4_0
@@ -327,6 +309,8 @@ llamaswap_models:
       --temp 1.1
       --top-p 0.95
       --jinja
+      --fit on
+      --fit-target 512,5120
       --swa-checkpoints 0
     supports_function_calling: true
     supports_vision: false
@@ -355,7 +339,6 @@ llamaswap_models:
       --threads-batch 12
       --ctx-size 16384
       --n-predict 16384
-      --flash-attn on
       --n-gpu-layers 99
       --cache-type-k q4_0
       --cache-type-v q4_0
@@ -391,7 +374,6 @@ llamaswap_models:
       --threads-batch 12
       --ctx-size 16384
       --n-predict 16384
-      --flash-attn on
       --n-gpu-layers 99
       --cache-type-k q4_0
       --cache-type-v q4_0
@@ -428,7 +410,6 @@ llamaswap_models:
       --n-gpu-layers 99
       --cache-type-k q8_0
       --cache-type-v q8_0
-      --threads -1
       --temp 1.0
       --top-p 1.0
       --top-k 0
@@ -462,7 +443,7 @@ llamaswap_models:
       --top-k 0
       --jinja
       --fit on
-      --fit-target 5600
+      --fit-target 5120
     supports_function_calling: true
     supports_vision: false
     group: "5060ti"
