--- a/group_vars/all/services.yml
+++ b/group_vars/all/services.yml
@@ -164,6 +164,12 @@ services:
     http_port: "{{ phoenix_port }}"
     group: AI
     icon: phoenix.png
+  litellm:
+    name: LiteLLM API
+    target: homelab-nuc.lan
+    http_port: "{{ litellm_proxy_port }}"
+    group: AI
+    icon: litellm.png
   litellm-ui:
     name: LiteLLM Admin
     target: homelab-nuc.lan
